过滤 node_modules/

--- a/sever/package.json
+++ b/sever/package.json
@@ -3,6 +3,7 @@
     "download": "^8.0.0",
     "http": "^0.0.1-security",
     "ip": "^1.1.8",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "request": "^2.88.2"
   }
 }
